--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bee-queue": "^1.0.0",
     "body-parser": "^1.17.2",
     "bull": "^3.3.7",
+    "dotenv": "7.0.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.10",
